<resources>
    <string name="app_name">OKUR Application</string>
    <string name="editText">Ad Soyad Gir</string>
    <string name="button1">Adimi Goster</string>
    <string name="textView">AdINIZ Budur</string>


    <string name="search_text">Search</string>
    <string name="menuBtn">MenuBtn</string>
    <string name="profilBtn">ProfilBtn</string>
    <string name="searchBtn">SearchBtn</string>
    <string name="bookımage">BookImage</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="backBtn">BackBtn</string>
    <string name="menu_category">menu_category</string>
    <string name="main_welcome">main_welcome</string>
    <string name="category">category</string>

</resources>