<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2FE90"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/menuBtn"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:backgroundTint="#7BDE6B"
        android:contentDescription="@string/menuBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

    <Button
        android:id="@+id/mainPage"
        android:layout_width="253dp"
        android:layout_height="69dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/backBtn"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="@+id/okurImage"
        app:layout_constraintStart_toEndOf="@+id/menuBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/okurImage"
        android:layout_width="258dp"
        android:layout_height="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/background_yellow"
        app:srcCompat="@drawable/okurlogo" />

    <ImageButton
        android:id="@+id/accountImage"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="#323232"
        android:backgroundTint="@color/background_yellow"
        android:contentDescription="@string/profilBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_account_circle_24" />


    <TextView
        android:id="@+id/category"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="1dp"
        android:gravity="center"
        android:hint="@string/category"
        android:maxLength="25"
        android:maxLines="1"
        android:text="TextView"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/okurImage" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recyclerView"
        tools:listitem="@layout/book"
        android:layout_marginTop="125dp"
        tools:itemCount="9"/>

</androidx.constraintlayout.widget.ConstraintLayout>